first branch commit

--- a/javascript-output.html
+++ b/javascript-output.html
@@ -10,10 +10,12 @@
     <p id="text"> </p>
   <script type="text/javascript">
 
-    document.getElementById("text").innerHTML = Date();
+   var name = "Amber";
+   var Name = "Kaden";
 
-    // window.alert("hellow world");
-    // document.write("hi!");
+   document.write(name);
+
+
   
   </script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
