--- a/javascript-output.html
+++ b/javascript-output.html
@@ -10,10 +10,21 @@
     <p id="text"> </p>
   <script type="text/javascript">
 
-   var name = "Amber";
-   var Name = "Kaden";
+  //  var name = "Amber";
+  //  var Name = "Kaden";
+  // var number1 = 20;
+  // var number2 = 50;
+    // var total = number1 + number2;
 
-   document.write(name);
+    // var firstName = "Amber";
+    // var lastName = "Ruth";
+
+    // var fullName = firstName + " " + lastName;
+
+    var name = "amber";
+    name += " rutherford";
+
+  document.write(name);
 
 
   
