added code for arrays

--- a/javascript-output.html
+++ b/javascript-output.html
@@ -7,13 +7,16 @@
   </head>
   <body>
 
-    <p id="text"> </p>
+   
   <script type="text/javascript">
 
-    document.getElementById("text").innerHTML = Date();
-
-    // window.alert("hellow world");
-    // document.write("hi!");
+  //  var fruits = ["mango","apple","orange",30];
+    var friends = [
+      ["Steve", "London", 27],
+      ["Kacey", "Amsterdam", 23], 
+      ["Jan", "New York", 29]
+      ];
+   document.write(friends[0][1]);
   
   </script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
