--- a/javascript-output.html
+++ b/javascript-output.html
@@ -7,14 +7,21 @@
   </head>
   <body>
 
-    <p id="text"> </p>
   <script type="text/javascript">
 
-    document.getElementById("text").innerHTML = Date();
-
-    // window.alert("hellow world");
-    // document.write("hi!");
+  // function total(number1){
+  //   return(number1 * 60);
+  // }
   
+  // document.write(total(20));
+
+    var number1 = 50;
+
+    function number3(number2){
+      return(number1 + number2);
+    }
+
+    document.write("Your number is" + " " + number3(20));
   </script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js" type="text/javascript"></script> -->
