first part of code

--- a/javascript-output.html
+++ b/javascript-output.html
@@ -7,13 +7,16 @@
   </head>
   <body>
 
-    <p id="text"> </p>
   <script type="text/javascript">
 
-    document.getElementById("text").innerHTML = Date();
+    var number = 4;
 
-    // window.alert("hellow world");
-    // document.write("hi!");
+    if(number == 5){
+
+      document.write("yes the number is 5");
+    }else {
+      document.write("this is not 5");
+    }
   
   </script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
