--- a/javascript-output.html
+++ b/javascript-output.html
@@ -9,15 +9,24 @@
 
   <script type="text/javascript">
 
-    var number = 4;
+    // var number = 5;
 
-    if(number == 5){
+    // if(number == 5){
 
-      document.write("yes the number is 5");
-    }else {
-      document.write("this is not 5");
-    }
+    //   document.write("yes the number is 5");
+    // }else if(number == 4) {
+    //   document.write("this is 4");
+    // }else{
+    //   document.write("this is neither 4 or 5");
+    // }
   
+      var number = 40;
+
+      if( number < 10){
+        document.write("this number is less than 10")
+      } else {
+        document.write("this number is greater than 10");
+      }
   </script>
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js" type="text/javascript"></script> -->
